--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -10,4 +10,4 @@ jobs:
     - name: Checkout module
       uses: actions/checkout@master
     - name: Check style
-      uses: burki24/action-style@master
+      uses: Burki24/action-style@master
