--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/symcon/StylePHP
 [submodule ".style"]
 	path = .style
-	url = https://github.com/symcon/StylePHP
+	url = https://github.com/Burki24/StylePHP
