--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule ".style"]
 	path = .style
 	url = https://github.com/Burki24/StylePHP
-[submodule "libs/vendor/SymconModulHelper"]
+[submodule "libs/SymconModulHelper"]
 	path = libs/SymconModulHelper
 	url = https://github.com/Burki24/SymconModulHelper
